--- a/infograph/public/index.html
+++ b/infograph/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Världsdata - Dashboard</h1>
-    <p>En interaktiv dashboard som visualiserar världens länder baserat på befolkning och region.</p>
+    <p>En "interaktiv" dashboard som visualiserar världens länder baserat på befolkning och region.</p>
 
     <div class="dashboard">
         <div class="chart-container">
